listview scatterplot overlaps fixed

--- a/src/app/components/scatterplot.component/scatterplot.component.scss
+++ b/src/app/components/scatterplot.component/scatterplot.component.scss
@@ -36,8 +36,22 @@ table {
 ::ng-deep .tooltip {
     position: absolute;
     z-index: 99;
-    width: 80px;
-    height: 40px;
+    width: auto;
+    height: auto;
     pointer-events: none;
     background-color: rgba(255,255,255,0.75);
+    .scatterplot-cluster-point {
+        display: flex;
+        flex: 0 1 auto;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }  
+    .scatterplot-profile-pic {
+        border: 4px solid #00d1b2;
+        width: 35px;
+        border-radius: 50%;
+        height: 35px;
+        margin-right: 0.5em;
+    }
 }
